kdepasswd KCM: facePerm is a KDM option, unrelated to the user setting his face (for other apps)

REVIEW: 102799
BUG: 183245
FIXED-IN: 4.8